--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="j1">
 			<ul class="nav">
-				<li><a href="sobre.html">Sobre</a></li>
+				<li><a href="sobre.html">Olá mundo</a></li>
 				<li><a href="Filmes.html">Filmes</a></li>
 				<li><a href="HQs.html">Hqs</a></li>
 				<li><a href="">Extras</a></li>
